# nanostore

./: .gitignore  install.sh  setup.sh  update.sh
backend/: api.py  card.py  card_listener.py  cart.py  customer.py  db.py  order.py  product.py  pyproject.toml  relay.py  scale.py  server.py  usblrb.py
frontend/: .eslintrc-auto-import.json  index.html  package.json  themeConfig.js
frontend/src/@layouts/components/: HorizontalNavLayout.vue
frontend/src/composables/: useApi.js
frontend/src/layouts/components/: Footer.vue  NavBarNotifications.vue  UserProfile.vue
frontend/src/pages/: cart.vue  checkout.vue  confirmation.vue  index.vue
frontend/src/utils/: helpers.js
